Updated my site with new content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -12,20 +15,24 @@
     <video loop muted autoplay id="myVideo">
         <source src="./src/video/Alyssa & James _ She will always hate me.mp4" type="video/mp4">
     </video>
-    <button onclick="unmuteVideo()">Voice🔊</button>
+    <button onclick="unmuteVideo()">
+        <svg class="voice" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M747.692-481q0-81.995-44.417-149.665-44.418-67.67-119.121-101.258-8.077-3.923-12-11.116-3.923-7.192-.671-14.748 3.902-8.059 12.863-10.444 8.962-2.385 18.039 1.538Q686.308-727.539 737-650.991q50.693 76.548 50.693 169.962 0 93.414-50.693 169.991-50.692 76.577-134.615 115.731-9.077 3.923-18.039 1.538-8.961-2.385-12.863-10.444-3.252-7.556.671-14.748 3.923-7.193 12-11.116 74.703-33.588 119.121-101.258 44.417-67.67 44.417-149.665Zm-438.461 81H204.615q-13.731 0-23.019-9.288-9.289-9.289-9.289-23.019v-95.386q0-13.73 9.289-23.019Q190.884-560 204.615-560h104.616l107.384-107.385q9.77-9.769 22.731-4.486 12.962 5.284 12.962 18.871v346q0 13.587-12.962 18.871-12.961 5.283-22.731-4.486L309.231-400Zm323.077-79.913q0 32.856-12.077 62.192-12.077 29.337-33.771 50.875-6.998 5.385-15.191 1.808-8.192-3.577-8.192-12.5v-206.924q0-8.923 8.192-12.5 8.193-3.577 15.191 1.679 21.694 21.898 33.771 52.206 12.077 30.308 12.077 63.164ZM412.308-606l-86 86h-114v80h114l86 86v-252Zm-100 126Z"/></svg>
+    </button>
     <h1>Alyssa & James</h1>
     <div class="container">
-            <img class="active"  src="./src/img/img1.jpg" alt="">
-            <img src="./src/img/img2.jpg" alt="">
-            <img src="./src/img/img3.jpg" alt="">
-            <img src="./src/img/img5.jpg" alt="">
-            <img src="./src/img/img6.jpg" alt="">
-            <img src="./src/img/img7.jpg" alt="">
-            <img src="./src/img/img8.png" alt="">
-            <img src="./src/img/img9.jpg" alt="">
-            <img src="./src/img/img10.jpg" alt="">
+        <img class="active" src="./src/img/img1.jpg" alt="">
+        <img src="./src/img/img2.jpg" alt="">
+        <img src="./src/img/img3.jpg" alt="">
+        <img src="./src/img/img5.jpg" alt="">
+        <img src="./src/img/img6.jpg" alt="">
+        <img src="./src/img/img7.jpg" alt="">
+        <img src="./src/img/img8.png" alt="">
+        <img src="./src/img/img9.jpg" alt="">
+        <img src="./src/img/img10.jpg" alt="">
     </div>
-    <div class="block-text"><p class="last-text">The End of the F***ing World / 2017</p></div>
+    <div class="block-text">
+        <p class="last-text">The End of the F***ing World / 2017</p>
+    </div>
 
     <script src="./src/js/main.js"></script>
 </body>
